# voice-system

./: .env.example  .gitignore  HANDOFF.md  README.md  SPEC.md  app.py  cli.py  pyproject.toml
persona/: arc.example.md  base.example.md  interior.example.md
voice/: __init__.py  config.py  dialogue.py  embeddings.py  generate.py  ingest.py  persona.py  retrieve.py
